client/src/App.css
/* App */
* {
  box-sizing: border-box;
  font-family: "Poppins", "Outfit", "Roboto", "Inter";
}
body {
  color: #222;
  background-color: #f2f2f2;
}
img {
  max-width: 100%;
}

/* React Toastify */
.toastBody {
  white-space: nowrap;
}
@media screen and (max-width: 768px) {
  .toastBody {
    white-space: normal;
  }
}

/* Layout */
main {
  padding: 10px;
  max-width: 1000px;
  margin: 0 auto;
}

/* Header */
header {
  display: flex;
  justify-content: space-between;
  margin-top: 20px;
  margin-bottom: 50px;
  align-items: center;
}
header a {
  text-decoration: none;
  color: inherit;
  cursor: pointer;
}
header a.logo {
  font-weight: bold;
  font-size: 1.5rem;
}
header nav {
  display: flex;
  gap: 15px;
}
.hamburger {
  display: none;
  font-size: 2rem;
  cursor: pointer;
}
@media (max-width: 768px) {
  .nav-links {
    display: flex;
    flex-direction: column;
    gap: 10px;
    background-color: rgba(51, 51, 51, 0.9);
    color: #fff;
    position: absolute;
    top: 80px;
    right: 0;
    width: 200px;
    transform: translateX(100%);
    transition: transform 0.3s ease-in-out;
    text-align: center;
    padding: 20px 0;
    border-radius: 10px;
  }

  .nav-links.open {
    transform: translateX(0);
  }

  .hamburger {
    display: block;
  }
}

/* Post */
div.post {
  display: grid;
  grid-template-columns: 1fr;
  gap: 20px;
  margin-bottom: 30px;
}
div.post div.image {
  max-height: 300px;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}
@media screen and (min-width: 700px) {
  div.post {
    grid-template-columns: 0.9fr 1.1fr;
  }
}
div.post div.texts h2 {
  margin: 0;
  font-size: 1.8rem;
}
div.post div.texts a {
  text-decoration: none;
  color: inherit;
}
div.post p.info {
  margin: 6px 0;
  color: #888;
  font-size: 0.7rem;
  font-weight: bold;
  display: flex;
  gap: 10px;
}
div.post p.info a.author {
  color: #333;
}
div.post p.summary {
  margin: 10px 0;
  line-height: 1.4rem;
}

/* LoginPage & RegisterPage */
form.login,
form.register {
  max-width: 400px;
  margin: 0 auto;
}
input {
  display: block;
  margin-bottom: 5px;
  width: 100%;
  padding: 5px 7px;
  border: 2px solid #ddd;
  background-color: #fff;
  border-radius: 5px;
}
button {
  width: 100%;
  display: block;
  background-color: #555;
  border: 0;
  color: #fff;
  border-radius: 5px;
  padding: 7px 0;
}
form.login h1,
form.register h1 {
  text-align: center;
}
.link-section {
  max-width: 400px;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem; /* Adjust the gap as needed */
  margin-top: 1.25rem; /* Adjust the top margin as needed */
}
.link-section a {
  text-decoration: none;
}

/* PostPage */
div.post-page div.image {
  max-height: 300px;
  display: flex;
  overflow: hidden;
}
div.post-page div.image img {
  object-fit: cover;
  object-position: center center;
  width: 100%;
}
div.post-page a {
  color: #333;
  text-decoration: underline;
}
div.post-page h1 {
  text-align: center;
  margin: 10px 0 5px;
}
div.post-page time {
  text-align: center;
  display: block;
  font-size: 1rem;
  color: #aaa;
  margin: 10px 0;
}
div.post-page div.author {
  text-align: center;
  margin-bottom: 20px;
  font-size: 0.7rem;
  font-weight: bold;
}
div.post-page div.content p {
  line-height: 1.7rem;
  margin: 30px 0;
}
div.content li {
  margin-bottom: 10px;
}
div.edit-delete-row {
  display: flex;
  justify-content: center;
  gap: 10px;
}
div.post-page a.edit-btn {
  background-color: #333;
  display: inline-flex;
  align-items: center;
  gap: 5px;
  color: #fff;
  padding: 15px 30px;
  border-radius: 5px;
  text-decoration: none;
}
a svg,
button svg {
  height: 20px;
}
div.post-page button.delete-btn {
  background-color: #ff5555;
  display: inline-flex;
  align-items: center;
  gap: 5px;
  color: #fff;
  padding: 15px 30px;
  border-radius: 5px;
  text-decoration: none;
  cursor: pointer;
  width: auto;
  font-size: 16px;
}
.delete-btn:hover {
  background-color: #dd4444;
}
.delete-confirmation p {
  margin-bottom: 10px;
}
.delete-confirmation button {
  margin: 5px;
  width: auto;
}
.delete-confirmation button:hover {
  background-color: #dd4444;
}
.edit-delete-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 10px;
}

/* ErrorPage */
.error-container {
  text-align: center;
  margin-top: 50px;
}
.error-container h1 {
  font-size: 36px;
  color: black;
}
.error-container p {
  font-size: 18px;
  color: #333;
  margin-top: 20px;
}

/* MyPostsPage */
.no-posts {
  text-align: center;
  margin-top: 50px;
  font-size: 18px;
  color: black;
}

/* Shimmer UI */
div.shimmer-post {
  display: grid;
  grid-template-columns: 1fr;
  gap: 20px;
  margin-bottom: 30px;
}
div.shimmer-post div.shimmer-image {
  height: 300px;
  background-color: rgb(226 232 240);
  border-radius: 5px;
}
@media screen and (min-width: 700px) {
  div.shimmer-post {
    grid-template-columns: 0.9fr 1.1fr;
  }
}
div.shimmer-post div.shimmer-texts h2.shimmer-title {
  height: 88px;
  width: 100%;
  background-color: rgb(226 232 240);
  border-radius: 5px;
}
div.shimmer-post p.shimmer-info,
div.shimmer-post p.shimmer-summary {
  height: 20px;
  width: 100%;
  background-color: rgb(226 232 240);
  border-radius: 5px;
  margin: 0;
  margin-bottom: 10px;
}

